--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Godstone Benefice Services</title>
-  <p><iframe width="1189" height="669" src="https://www.youtube.com/embed/Jb23UGlDvYI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-  <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="/manifest.json">
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <link rel="apple-touch-icon" href="images/hello-icon-152.png">
@@ -18,7 +17,8 @@
 </head>
 <body class="fullscreen">
   <div class="container">
-    <h1 class="title">Hello World!</h1>
+    <h1 class="title"><iframe width="1189" height="669" src="https://www.youtube.com/embed/Jb23UGlDvYI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</h1>
   </div>
   <script src="js/main.js"></script>
 </body>
